--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -30,7 +30,7 @@ body {
     color: white !important;
     text-decoration: none !important;
     -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
 }
 
 .menuSuperior1 a:hover, .menuSuperior2 a:hover {
@@ -92,6 +92,68 @@ body {
 }
 
 
-#indexContenidoJsp{
-    background: white;
+.login{
+    margin-top: 50px;
+    padding: 50px;
+    background: #B8B8B8;
+    border-radius: 25px;
+    color: black;
+    font-size: 14px;
+    
+    -webkit-box-shadow: 13px 13px 13px 1px rgba(0,0,0,0.68);
+    -moz-box-shadow: 13px 13px 13px 1px rgba(0,0,0,0.68);
+    box-shadow: 13px 13px 13px 1px rgba(0,0,0,0.68);
+}
+
+.loginButton {
+	-moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	box-shadow:inset 0px 0px 0px 0px #ffffff;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+	background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+	background-color:#f9f9f9;
+	-webkit-border-top-left-radius:36px;
+	-moz-border-radius-topleft:36px;
+	border-top-left-radius:36px;
+	-webkit-border-top-right-radius:0px;
+	-moz-border-radius-topright:0px;
+	border-top-right-radius:0px;
+	-webkit-border-bottom-right-radius:36px;
+	-moz-border-radius-bottomright:36px;
+	border-bottom-right-radius:36px;
+	-webkit-border-bottom-left-radius:0px;
+	-moz-border-radius-bottomleft:0px;
+	border-bottom-left-radius:0px;
+	text-indent:0px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	color:#666666;
+	font-family:Trebuchet MS;
+	font-size:16px;
+	font-weight:bold;
+	font-style:normal;
+	height:55px;
+	line-height:55px;
+	width:184px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #ffffff;
+        
+        margin-left: 170px;
+        outline: none;
+}
+.loginButton:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+	background-color:#e9e9e9;
+        color: #282828;
+}.loginButton:active {
+	position:relative;
+	top:1px;
+}
+
+.contenido {
+    margin-top: 60px;
 }
